--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-  <div>
+  <!-- <div>
     <div class='line'>3213</div>
     <div class='info'>场地位置： 鄞州区 万达广场 1号门</div>
     <div class='info'>商户信息： 宁波鄞州万达广场</div>
@@ -44,7 +44,7 @@
     <div>这段不参与计数。</div>
     <p class='info'>这是第三段。</p>
     <p class='info'>这是第四段。</p>
-  </div>
+  </div> -->
 </body>
 <script src="./js/0615.js"></script>
 
