--- a/index.html
+++ b/index.html
@@ -47,5 +47,34 @@
   </div> -->
 </body>
 <script src="./js/0615.js"></script>
+<script>
+  // let test = new Promise((resolve, reject) => {
+  //   console.log('test')
+  //   let random = Math.random()
+  //   if (random > 0.5) {
+  //     resolve('大于0.5')
+  //   } else {
+  //     reject('小于等于0.5')
+  //   }
+  // })
+
+  // let p = test.then((result) => {
+  //   console.log(result, 'then1')
+  //   return result
+  // })
+  //   .catch((result) => {
+  //     console.log(result)
+  //     return result
+  //   })
+  //   .then((result) => {
+  //     console.log(result)
+  //     return result
+  //   })
+  //   .then((result) => {
+  //     console.log('last', result)
+  //   })
+
+  // console.log(p)
+</script>
 
 </html>
